manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books
  labels:
    app: books
spec:
  selector:
    matchLabels:
      app: books
  replicas: 1
  template:
    metadata:
      labels:
        app: books
    spec:
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "status.localhost"
      containers:
      - name: books
        image: valerauko/books:0.1.4
        resources:
          limits:
            memory: "128Mi"
          requests:
            memory: "64Mi"
        volumeMounts:
        - name: books-secret-volume
          readOnly: true
          mountPath: /usr/local/books/.salt
          subPath: .salt
        ports:
        - name: http
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /login
            port: http
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /login
            port: http
          failureThreshold: 6
          initialDelaySeconds: 15
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
      volumes:
      - name: books-secret-volume
        secret:
          secretName: books-salt
          items:
            - key: salt
              path: ".salt"
